<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/video_view">
        </WebView>

        <Button
            android:id="@+id/button_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:text="@string/fullscren_text"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            >

        </Button>



</RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/swipe_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/swipeleft"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/swiperight"
            android:gravity="end"
            android:layout_alignBaseline="@id/swipe_left"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"/>


    </RelativeLayout>





</androidx.cardview.widget.CardView>