<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".GetAllActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/selection_spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:entries="@array/spinner_array_all"
            android:elevation="5dp"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/pagenum"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_num"
                android:textColor="@color/colorBlack"
                android:layout_toRightOf="@id/prev"
                android:textSize="16sp"
                >
            </TextView>


            <Button
                android:id="@+id/prev"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:elevation="5dp"
                android:text="@string/prev"
                android:textColor="@color/colorBlack"
                android:textSize="10sp">

            </Button>

            <Button
                android:id="@+id/next"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:elevation="5dp"
                android:layout_toRightOf="@id/pagenum"
                android:text="@string/next"
                android:textColor="@color/colorBlack"
                android:textSize="10sp">

            </Button>



        </RelativeLayout>






    </RelativeLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_movie_recycle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/movie_adapter" />


</LinearLayout>